# cibyl

./: CMakeLists.txt  search.c
inc/: cibyl.h  engine.h  eval.h  log.h  perft.h  search.h  types.h  uci.h
inc/board/: cb_bitutil.h  cb_board.h  cb_const.h  cb_dbg.h  cb_history.h  cb_mailbox.h  cb_move.h  cb_tables.h  cb_types.h
inc/cb/: bitutil.h  boardrep.h  cb.h  const.h  debug.h  eval.h  history.h  move.h  tables.h  types.h
inc/utils/: crosstime.h  easy_error.h
include/cblib/: cb_lib.h
include/cibyl/: engine.h  options.h  uci.h
src/: cibyl.c  engine.c  eval.c  perft.c  search.c  uci.c
src/board/: cb_const.c  cb_dbg.c  cb_gen.c  cb_lib.c  cb_magical.c  cb_normal.c
src/cb/: cb.c  const.c  debug.c  eval.c  gen.c  magical.c  normal.c
src/cibyl/: cibyl.c  engine.c  search.c  uci.c
src/debug/: debug.c  perft.c
utils/: dtb.py  perft.py  perft_find_error.py
